# stupid-simple-launcher

./: .gitignore  Cifras.MD  README.md  metadata.desktop
contents/config/: config.qml  main.xml
contents/ui/: ApplicationsGrid.qml  AppsModel.qml  CategoriesList.qml  CategoryButton.qml  CategoryButtonFactory.qml  CategoryButtonTemplate.qml  ConfigCategory.qml  ConfigGeneral.qml  Dictionary.MD  ItemGridDelegate.qml  ItemGridView.qml  MenuRepresentation.qml  PaginatedApplicationsGrid.qml  ScrollableItemGridView.qml  SearchBar.qml  SessionButton.qml  SessionControlBar.qml  main.qml
contents/ui/configuration_sheets/: CategoryButtonTemplate.qml  ConfigBackground.qml  ConfigCategory.qml  ConfigGeneral.qml  ConfigHiddenApps.qml  ConfigSearchBar.qml  ConfigSessionControl.qml
contents/ui/searchbar_designs/: FullyFledged.qml  MaterialOutlined.qml  ModernComfy.qml  Underlining.qml
previews/: AllAppsLightDark.png~  after
tests/: tst_CategoryButton.qml  tst_SearchBar.qml
v1/: README.md  metadata.desktop
v1/contents/config/: config.qml  main.xml
v1/contents/ui/: ApplicationButton.qml  ApplicationsGrid.qml  CategoryButton.qml  CategoryButtonFactory.qml  CompactRepresentation.qml  Dictionary.MD  ItemGridDelegate.qml  ItemGridView.qml  MenuRepresentation.qml  PaginatedApplicationsGrid.qml  ScrollableItemGridView.qml  main.qml
v1/tests/: tst_SearchBar.qml
v2/: CMakeLists.txt  Settings.h  main.cpp
v2/qobjects/: ApplicationEntry.cpp  ApplicationEntry.h  ApplicationsModel.cpp  ApplicationsModel.h
v2/ui/: ApplicationEntry.qml  RootItem.qml
(+8 files in other folders)
